# pickr

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  setup.sh  tsconfig.node.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  USAGE.md
docs/superpowers/plans/: 2026-06-29-face-blur-preview.md
docs/superpowers/specs/: 2026-06-29-face-blur-preview-design.md
scripts/: ensure-sidecar.sh
sidecar/: README.md  build_binary.py  entry_point.py  pyproject.toml
sidecar/pickr_sidecar/: __init__.py  __main__.py  ai.py  blur.py  blur_export.py  dedup.py  protocol.py  recognize.py  scan.py  thumbs.py
sidecar/tests/: conftest.py  test_ai.py  test_blur.py  test_blur_video.py  test_exif.py  test_heic_preview.py  test_scan.py  test_video.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: EmptyState.tsx  ErrorBoundary.tsx  ExportDialog.tsx  FaceOverlay.tsx  KeyboardShortcutsModal.tsx  Lightbox.tsx  SaveIndicator.tsx  ScanProgress.tsx  Sidebar.tsx  SortableGrid.tsx  StatsBar.tsx  Thumbnail.tsx  TopBar.tsx
src/components/ui/: label.tsx  switch.tsx
src/features/face-tag/: FaceTagModal.tsx
src/features/filters/: FilterChips.tsx  dupHelpers.ts
src/features/persistence/: usePersistence.ts
src/lib/: commands.ts  faceUtils.ts  folderContext.ts  types.ts  useFolderActions.ts  useOrderedItems.ts  utils.ts
src/stores/: filtersStore.ts  identitiesStore.ts  projectStore.ts
