[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pickr-sidecar"
version = "0.3.0"
description = "Python sidecar for Pickr media analysis (scan, dedup, face detection/matching)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pickr" }]
dependencies = [
    "pillow >= 10.0",
    "pillow-heif >= 0.18",
    "opencv-python-headless >= 4.8",
    "imagehash >= 4.3",
    "imageio[ffmpeg] >= 2.31",
    "numpy >= 1.24",
]

[project.optional-dependencies]
# face_recognition depends on dlib, whose build can fail on some platforms.
# Kept optional so core scan/dedup work without it. setuptools is pulled in
# because face_recognition_models imports pkg_resources, which is no longer
# bundled with Python >= 3.12 venvs.
faces = ["face_recognition >= 1.3", "setuptools >= 68, < 81"]
dev = [
    "pytest >= 7.4",
]

[project.scripts]
pickr-sidecar = "pickr_sidecar.__main__:main"

[tool.setuptools.packages.find]
include = ["pickr_sidecar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
