[package]
name = "pickr"
version = "0.2.0"
description = "Drag-to-reorder photo/video curation tool"
authors = ["Pickr Contributors"]
edition = "2021"

[lib]
name = "pickr_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "fs"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
